--- a/style.css
+++ b/style.css
@@ -76,8 +76,31 @@ footer{
   font-size: 30px;
   text-align: center;
   font-family: Arial;
-  border-bottom:1px solid #000;
   font-weight: bold;
   margin-top: 4px;
   padding:40px
+}
+
+.logo-rodape{
+  width: 100px;
+}
+
+footer{
+  background-color: #000;
+  color: #FFF;
+  padding: 30px;
+}
+
+.texto-rodape{
+  margin-left: 5%;
+}
+
+.textoMeio{
+  text-align: center;
+  font-size: 31px;
+  background-color: #000;
+  color:#FFF;
+  padding: 50px;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
