Modificações no css e html, ajustando espaçamento entre as divs

--- a/style.css
+++ b/style.css
@@ -1,106 +1,142 @@
-body{
-    gap: 20px;
+body {
+  gap: 20px;
+  min-height: 100vh;
 }
-
 
 header {
-    background-color: #ffffff;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-
-  }
-  
-  .logo-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .imgLogo{
-    width: 50px;
-  }
-  .login{
-    width: 40px;
-    margin-right: 10px;
-    margin-bottom: 10px
-  }
-  .menu{
-    width: 40px;
-    margin-top: 3px;
-  }
-
-  .links-container {
-    display: flex;
-  }
-  
-  .links-container a {
-    margin-left: 10px;
-  }
-.formIndex{
-    display: grid;
-    grid-template-columns: 1fr 5fr 1fr;
-}
-.forms{
-    display: grid;
-    grid-column: 2;
-    grid-template-rows: 3;
-    background-color: #F8DA6E;
-    padding: 30px;
-    margin: 100px 100px;
-    border-radius: 20px;
-}
-.linha1{
-    display: flex;
-    grid-column: 1;
+  background-color: #ffffff;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 
-
-.imagens-voo{
-    display: flex;
-    grid-column: 2;
+.logo-container {
+  display: flex;
+  align-items: center;
 }
 
-footer{
-    display: flex;
-    grid-column: 2;
+.imgLogo {
+  width: 50px;
 }
 
-.barraImagens{
-    width: 450px;
-    border: 1px solid #000;
+.login {
+  width: 40px;
+  margin-right: 10px;
+  margin-bottom: 10px
 }
 
-.destino{
+.menu {
+  width: 40px;
+  margin-top: 3px;
+}
+
+.links-container {
+  display: flex;
+}
+
+.links-container a {
+  margin-left: 10px;
+}
+
+.formIndex {
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr;
+}
+
+.forms {
+  display: grid;
+  grid-column: 2;
+  grid-template-rows: 3;
+  background-color: #F8DA6E;
+  padding: 30px;
+  margin: 100px 100px;
+  border-radius: 20px;
+}
+
+.linha1 {
+  display: flex;
+  grid-column: 1;
+}
+
+
+.imagens-voo {
+  display: flex;
+  grid-column: 2;
+}
+
+footer {
+  display: flex;
+  grid-column: 2;
+}
+
+
+.destino {
+  padding-top: 30px;
   font-size: 30px;
-  text-align: center;
-  font-family: Arial;
+  font-family: arial;
   font-weight: bold;
-  margin-top: 4px;
-  padding:40px
+  text-align: center;
 }
 
-.logo-rodape{
+.logo-rodape {
   width: 100px;
 }
 
-footer{
+footer {
   background-color: #000;
   color: #FFF;
   padding: 30px;
 }
 
-.texto-rodape{
+.texto-rodape {
   margin-left: 5%;
 }
 
-.textoMeio{
+.textoMeio {
   text-align: center;
   font-size: 31px;
   background-color: #000;
-  color:#FFF;
-  padding: 50px;
+  color: #FFF;
+  padding: 40px;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.imgMeio {
+  width: 100%;
+  display:grid;
+}
+
+.div-cristo {
+  color: #000;
+  float: left;
+  display: flex;
+  width: 100%;
+}
+
+.div-torre {
+  width: 100%;
+  float: right;
+  background-color: #000;
+  color: #FFF;
+}
+
+.div-ponte {
+  width: 100%;
+  float:left;
+  background-color: #FFF;
+  padding-bottom: 20px;
+}
+
+.imagem-torre {
+  float: right;
+}
+.imagem-cristo{
+  float:left;
+}
+.imagem-ponte{
+  float: left;
+}
+
